# remote_scheduler

./: database.py  main.py  models.py  pyproject.toml  scheduler.db
assets/: app.css
migrations/: step1_createJobsTable.sql
static/: input.css  stylesheet.css
static/js/: script.js
templates/: base.html  index.html
templates/_components/: counter.html  dashboard_table.html
templates/dashboard/: admin_dashboard.html  dashboard.html
templates/errors/: 403.html  404.html  4xx.html
templates/jobs/: job_detail.html  jobs.html
templates/login/: login.html
templates/profile/: profile.html
